# 0.00.10 (44355) Sep 23, 2010
9/23/10 modulate transparency of current indicator proportional to dV/dt, fade out when dV/dt=0
9/23/10 hide clock control panel, this sim contains no animations that should be pausable
9/23/10 make sim clock accessible to model
9/23/10 fix Add/Remove Wires button layout so that it doesn't overlap current indicator
9/23/10 create current indicator node, place on canvas, not wired up
9/23/10 increase value font size for bar meters
9/23/10 allow separate fonts for label and value on capacitor drag handles
9/23/10 use bold font for bar meter titles
9/23/10 reduce number of decimal places to 2 for all bar meters
9/23/10 use the same exponent for bar meter value and label, with max label format 10^N
# 0.00.09 (44322) Sep 22, 2010
9/22/10 use the same exponent for bar meter value and label, with max label format 10x10^N [44320]
# 0.00.08 (44318) Sep 22, 2010
9/22/10 use the same exponent for bar meter value and label, with max label format 1x10^N [44316]
# 0.00.07 (44315) Sep 22, 2010
9/22/10 remove tool tip and flashing max label from bar meters
# 0.00.06 (44263) Sep 21, 2010
9/21/10 dev version to discuss scale button on bar meters
9/21/10 use + and - magnifying glass images to indicate what the meter scale button will do
9/21/10 new images for the meter scale button, enable/disable button as appropriate
9/21/10 add ticks outside the bar meter track for min and max labels
9/21/10 add tooltip to meter scale button
9/21/10 add scale button to bar meters, flash max range label when it changes
9/21/10 move meter nodes to new capacitorlab.view.meters package
9/7/10 fixed plate area drag handler, use only x drag coordinate because y dimension is foreshortened for pseudo-3D perspective
9/7/10 resolve ordering problem with plate area drag handle offset
9/7/10 doc and consolidate duplicate code in BoxNode
9/7/10 replace EasyGridBagLayout with GridPanel throughout
9/7/10 created GridPanel, will test it here than migrate to phetcommon